--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+   "build": "prisma generate && next build",
+   "postinstall": "prisma generate",
     "start": "next start",
-    "lint": "eslint",
-    "vercel-build": "prisma generate && next build",
-    "postinstall": "prisma generate"
+    "lint": "eslint"
   },
   "dependencies": {
     "@prisma/client": "6.19",
